--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "@heroicons/react": "^2.2.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0", 
+    "react-dom": "^19.1.0", 
+    "react-dropzone": "^14.3.8", 
+    "react-hot-toast": "^2.5.2" 
   },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3"
+ "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4", 
+    "autoprefixer": "^10.4.21", 
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.4", 
+    "postcss": "^8.5.3",   
+    "tailwindcss": "^4.0.17",    
+    "typescript": "^5.8.2" 
   }
 }
